--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -29,6 +29,13 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>February 07, 2024</summary>
+                    Added IDs 23, 24, 25, 26.<br>
+                    Updated ID 1.<br>
+                    ArmaInscripta tag added.<br>
+                    Added #missable in the Starter Guide.
+                </details>
+                <details>
                     <summary>January 17, 2024</summary>
                     Added IDs 21, 22.<br>
                     Leveling tag added.<br>
