--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -6,25 +6,24 @@
             import {Embed} from "/univasset/scripts/html/index.js";
 
             // ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
-            const DIV = Embed.google(
+            document.querySelector("#main_content div").replaceWith(Embed.google(
                 ["Project Neural Cloud Character Usage Tips (by Jurisdiction)", "https://docs.google.com/document/d/1IJAFKL61Lyxa9a1oXt0ACb7dKTa7819dtzWViS6RqBI"],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
-                ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
                 ["PNC Search Terminal Lv5 Results", "https://docs.google.com/spreadsheets/d/1rF4aIT7GPS70euG4Zbbeib3pSidiKZVhFgpHWjDVC6I"],
+                ["Translated Tier List of 冰川星河", "https://docs.google.com/spreadsheets/d/1kuhW16wnGL4BkRf31_6mznsx02f8tI2KqSGCNYt2INM"],
                 ['PNC Neural Cloud Projections', 'https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU'],
-                ["MMG Entry 1: Team Building", "https://docs.google.com/spreadsheets/d/1KxJgCmfdLt3MbE1IC4T38hOCfauxSGQ6B2to8doXig8"],
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
+                ["Updated Function Catalog", "https://docs.google.com/spreadsheets/d/1M_sY0NcafkExgj2VTLSCY-2k9xkCA4rTXUXWHrykhdQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
                 ["PNC Calculator", "https://docs.google.com/spreadsheets/d/1_b9E22dIP526Axn4rUSBfLBKvQj7K1jB7iMfSiQBOdI"],
                 ["Just Abigail", "https://docs.google.com/spreadsheets/d/1Qekx9EWUwDWijVBbZBMcZBLPPE49jUmng3nX_oQ0ZEw"],
                 ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
-            )
-            document.querySelector("#main_content div").replaceWith(DIV)
+            ))
         </script>
 
         <meta charset='utf-8'>
