--- a/PNC/starter.html
+++ b/PNC/starter.html
@@ -30,9 +30,14 @@
             <section id="main_content">
                 <a href="#reroll" id="reroll"><h1>Can I F2P this game?</h1></a>
                 <p>Depends on your focus.</p>
-                <p>In terms of collecting and raising your units, verily. This game runs on a shards system (which are farmable, with a few exceptions), so dupes are pretty much just a collateral.</p>
+                <p>In terms of collecting and raising your units, verily. This game runs on a shards system (which are farmable, with very few exceptions), so dupes are pretty much just a collateral instead of something to pull towards.</p>
                 <p>In terms of skins though, this is pretty much their main source of income. You can still get free skins and a limited amount of free skin currencies.</p>
                 <p>TLDR; Basically, yes.</p>
+
+                <a href="#missable" id="missable"><h1>What would I miss if I start now?</h1></a>
+                <p>Pretty much vanity items only, nothing gameplay related.</p>
+
+                <!-- with how this game handles offrates in banners, it'd be better to focus on pulling for new/limited units, since older units will spook you sooner or later -->
             </section>
         </div>
     </body>
