--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -71,7 +71,7 @@
         </div>
 
         <dialog id="algo-modal">
-            <div></div>
+            <div id="name"></div>
 
             <div id="algo-field">
                 <div class="tab-button">
@@ -85,7 +85,7 @@
                 <div id="Special" class="tab-body"></div>
             </div>
 
-            <div><button type="button" id="close-modal">Close</button></div>
+            <div style="display: none;"><button type="button" id="close-modal">Close</button></div>
         </dialog>
 
         <dialog id="algo-select">
