--- a/univasset/scripts/faqs/index.html
+++ b/univasset/scripts/faqs/index.html
@@ -36,12 +36,11 @@
 </div>
 
 <template id="query-tags">
-    <span>
-        <label class="tags tooltip">
-            <input type="checkbox" />
-        </label>
+    <label class="tags tooltip">
+        <input type="checkbox" />
+        <span id="name"></span>
         <span class="tooltiptext"></span>
-    </span>
+    </label>
 </template>
 
 <template id="faq-card">
