--- a/univasset/scripts/faqs/index.html
+++ b/univasset/scripts/faqs/index.html
@@ -24,11 +24,11 @@
         </form>
         
         <div id="Browse" class="tab-body">
-            <button type="button" value="first">First</button>
-            <button type="button" value="previous">Prev</button>
+            <button type="button" name="page" value="first">First</button>
+            <button type="button" name="page" value="previous">Prev</button>
             <span id="page-no">0</span>/<span id="maxpage"></span>
-            <button type="button" value="next">Next</button>
-            <button type="button" value="last">Last</button>
+            <button type="button" name="page" value="next">Next</button>
+            <button type="button" name="page" value="last">Last</button>
         </div>
         
         <div id="cards-field"></div>
