--- a/univasset/scripts/faqs/index.html
+++ b/univasset/scripts/faqs/index.html
@@ -23,11 +23,14 @@
             <input type="submit" />
         </form>
         
+        <!-- <form id="Browse" class="tab-body"></form> -->
         <div id="Browse" class="tab-body">
             <button type="button" name="page" value="first">First</button>
             <button type="button" name="page" value="previous">Prev</button>
+            <!-- <include key="maxpage"></include> -->
             <span id="page-no">0</span>/<span id="maxpage"></span>
             <button type="button" name="page" value="next">Next</button>
+            <!-- <include attr-value="maxpage"></include> -->
             <button type="button" name="page" value="last">Last</button>
         </div>
         
