--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -31,7 +31,7 @@
 
         <div class="container">
             <section id="main_content">
-                <div id="table"></div>
+                <div id="table"></div>  <!-- setup table here instead -->
 
                 <!-- filter -->
                 <div id="classes">
@@ -46,14 +46,12 @@
 
                 <div id="bonus">
                     <div>Pre-Battle Bonus</div>
-                    <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">Units at Lv.70 and 5★.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Bond" />Intimacy</label>                 <span class="tooltiptext">Intimacy at Lv.15.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Oath" />Hearts As One</label>            <span class="tooltiptext">Available after Oath.</span></span>
-                    
-                    <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms and substats at Gold rarity. Efficiency at 2x.</span></span>
-
-                    <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at Lv.543.</span></span>
+                    <label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough <span class="tooltiptext">Units at Lv.70 and 5★.</span></label>
+                    <label class="tooltip"><input type="checkbox" value="Bond" />Intimacy               <span class="tooltiptext">Intimacy at Lv.15.</span></label>
+                    <label class="tooltip"><input type="checkbox" value="Oath" />Hearts As One          <span class="tooltiptext">Available after Oath.</span></label>
+                    <label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta         <span class="tooltiptext">Arma stats at Lv.30.</span></label>
+                    <label class="tooltip"><input type="checkbox" value="Algo" />Algorithm              <span class="tooltiptext">Algorithms and substats at Gold rarity. Efficiency at 2x.</span></label>
+                    <label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training     <span class="tooltiptext">Specialty at Lv.543.</span></label>
 
                     <!-- Fairies -->
                 </div>
