--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -46,12 +46,36 @@
 
                 <div id="bonus">
                     <div>Pre-Battle Bonus</div>
-                    <label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough <span class="tooltiptext">Units at Lv.70 and 5★.</span></label>
-                    <label class="tooltip"><input type="checkbox" value="Bond" />Intimacy               <span class="tooltiptext">Intimacy at Lv.15.</span></label>
-                    <label class="tooltip"><input type="checkbox" value="Oath" />Hearts As One          <span class="tooltiptext">Available after Oath.</span></label>
-                    <label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta         <span class="tooltiptext">Arma stats at Lv.30.</span></label>
-                    <label class="tooltip"><input type="checkbox" value="Algo" />Algorithm              <span class="tooltiptext">Algorithms and substats at Gold rarity. Efficiency at 2x.</span></label>
-                    <label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training     <span class="tooltiptext">Specialty at Lv.543.</span></label>
+                    <label class="tooltip">
+                        <input type="checkbox" value="PotB" />
+                        Potential Breakthrough
+                        <span class="tooltiptext">Units at Lv.70 and 5★.</span>
+                    </label>
+                    <label class="tooltip">
+                        <input type="checkbox" value="Bond" />
+                        Intimacy
+                        <span class="tooltiptext">Intimacy at Lv.15.</span>
+                    </label>
+                    <label class="tooltip">
+                        <input type="checkbox" value="Oath" />
+                        Hearts As One
+                        <span class="tooltiptext">Available after Oath.</span>
+                    </label>
+                    <label class="tooltip">
+                        <input type="checkbox" value="Arma" />
+                        Arma Inscripta
+                        <span class="tooltiptext">Arma stats at Lv.30.</span>
+                    </label>
+                    <label class="tooltip">
+                        <input type="checkbox" value="Algo" />
+                        Algorithm
+                        <span class="tooltiptext">Algorithms and substats at Gold rarity. Efficiency at 2x.</span>
+                    </label>
+                    <label class="tooltip">
+                        <input type="checkbox" value="Spec" />
+                        Specialty Training
+                        <span class="tooltiptext">Specialty at Lv.543.</span>
+                    </label>
 
                     <!-- Fairies -->
                 </div>
