--- a/PNC/unitskins/index.html
+++ b/PNC/unitskins/index.html
@@ -37,7 +37,7 @@
                             <tr></tr>
                         </thead>
                         <tbody></tbody>
-                        <!-- name, count, status, skins -->
+                        <!-- name, status, skins -->
                     </table>
                 </div>
                 <h6>Previous databases:</h6>
