--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -27,6 +27,6 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/faqs/index.html" subheader="Waiting tests" onreplace="queryFunc(tags, cards)" ></include>
+        <include src="/univasset/scripts/faqs/test.html" subheader="Browse tab test" onreplace="queryFunc(tags, cards)" ></include>
     </body>
 </html>
