--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -23,14 +23,24 @@
             <input type="text" name="tags" />
             <input type="submit" />
         </form>
-        
-        <div id="Browse" class="tab-body">
-            <button type="button" name="page" value="first">First</button>
-            <button type="button" name="page" value="previous">Prev</button>
-            <span id="page-no">0</span>/<include key="maxpage"></include>
-            <button type="button" name="page" value="next">Next</button>
-            <button type="button" name="page" value="last">Last</button>
-        </div>
+
+        <form id="Browse" class="tab-body">
+            <button type="submit" name="page" value="1">First</button>
+
+            <button type="submit" name="page" value="prev" disabled>Prev</button>
+
+            <span>
+                <input type="number" name="page" value="0">
+                <button type="submit" name="page">Go</button>
+            </span>
+            /<include key="maxpage"></include>
+
+            <button type="submit" name="page" value="next" disabled>Next</button>
+
+            <include attr-value="maxpage">
+                <button type="submit" name="page" value="last">Last</button>
+            </include>
+        </form>
         
         <div id="cards-field"></div>
     </section>
