--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>February 21, 2024</summary>
+                    Added IDs 507, 508, 509.<br>
+                    RankingMaps tag added.
+                </details>
+                <details>
                     <summary>February 16, 2024</summary>
                     Added ID 506.<br>
                     Updated ID 37.
