--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated ID 24.
+                </details>
+                <details>
                     <summary>February 21, 2024</summary>
                     Added IDs 507, 508, 509.<br>
                     RankingMaps tag added.
