--- a/PNC/index.html
+++ b/PNC/index.html
@@ -44,4 +44,12 @@
             </section>
         </div>
     </body>
+
+    <template id="timer-block">
+        <div class="func_timer">
+            <span id="title"></span>
+            <img loading="lazy">
+            <span id="countdown"></span>
+        </div>
+    </template>
 </html>
