--- a/PNC/index.html
+++ b/PNC/index.html
@@ -47,9 +47,9 @@
 
     <template id="timer-block">
         <div class="func_timer">
-            <span id="title"></span>
+            <span></span>
             <img loading="lazy">
-            <span id="countdown"></span>
+            <div></div>
         </div>
     </template>
 </html>
