--- a/univasset/scripts/copyright/copyright.html
+++ b/univasset/scripts/copyright/copyright.html
@@ -3,7 +3,7 @@
     company: Company name
 -->
 
-<p>This game called <include key="game"></include> is from <include key="company"></include>.</p>
+<p><include key="game"></include> belongs to <include key="company"></include>.</p>
 
 This website is an unofficial database for the mobile game Blue Archive developed by Nexon Games and published by Yostar (Japan) and Nexon (Global) for iOS and Android.
 This website is not affiliated with Nexon, Nexon Games or Yostar. All game artwork, information and assets used in this database are the property and copyright of the respective authors.
