--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,7 +29,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>February 28, 2024</summary>
                     Updated ID 24.
                 </details>
                 <details>
