--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>February 28, 2024</summary>
+                    Added IDs 27, 28, 29, 30.<br>
+                    Dormitories, TeamComposition tags added.
+                </details>
+                <details>
                     <summary>February 07, 2024</summary>
                     Added IDs 23, 24, 25, 26.<br>
                     Updated ID 1.<br>
