--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>March 04, 2024</summary>
+                    GFL Assets master folder moved to main page.
+                </details>
+                <details>
                     <summary>February 28, 2024</summary>
                     Updated ID 24.
                 </details>
