--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -42,6 +42,7 @@
                     <label><input type="checkbox" value="Specialist" checked /></label>
                     <label><input type="checkbox" value="Medic" checked /></label>
                 </div>
+                <!-- algorithm piece -->
                 <!-- has arma - yes, no, unselected -->
 
                 <div id="bonus">
