--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>March 06, 2024</summary>
+                    Added IDs 510, 511.
+                </details>
+                <details>
                     <summary>March 04, 2024</summary>
                     GFL Assets master folder moved to main page.
                 </details>
