--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <!-- has arma - yes, no, unselected -->        
-                </div>
+                </details>
 
                 <div id="bonus">
                     <div>Pre-Battle Bonus</div>
