--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -51,6 +51,7 @@
                         <label><input type="checkbox" value="Medic" checked /></label>
                     </div>
                     <div id="algorithms">
+                        <div>Algorithm</div>
                         <button type="button">
                             <img src="../assets/images/algorithms/others/Empty.png" alt="Remove" />
                         </button>
