--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -42,6 +42,7 @@
 
                 <details id="filter">
                     <summary>Filter</summary>
+
                     <div id="classes">
                         <div>Class</div>
                         <label><input type="checkbox" value="Guard" checked /></label>
@@ -50,6 +51,7 @@
                         <label><input type="checkbox" value="Specialist" checked /></label>
                         <label><input type="checkbox" value="Medic" checked /></label>
                     </div>
+
                     <div id="algorithms">
                         <div>Algorithm</div>
                         <button type="button">
@@ -61,6 +63,7 @@
                             <select id="sub2" class="substat"></select>    
                         </div>
                     </div>
+
                     <!-- has arma - yes, no, unselected -->        
                 </details>
 
@@ -122,3 +125,5 @@
 
     </body>
 </html>
+
+<!-- this page uses cookies for saving personal settings -->
