--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -60,7 +60,8 @@
                         <div>
                             <select id="main" class="mainstat"></select>
                             <select id="sub1" class="substat"></select>
-                            <select id="sub2" class="substat"></select>    
+                            <select id="sub2" class="substat"></select>
+                            <button type="button" id="reset">Reset</button>
                         </div>
                     </div>
 
