--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>March 13, 2024</summary>
+                    Added IDs 512, 513, 514, 515, 516.<br>
+                    Updated ID 254.
+                </details>
+                <details>
                     <summary>March 06, 2024</summary>
                     Added IDs 510, 511.
                 </details>
