--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -96,6 +96,8 @@
     <dialog id="algo-modal">
         <div id="name"></div>
 
+        <div id="help" data-tooltip="Click outside to close the dialog window."></div>
+
         <div id="algo-field">
             <div class="tab-button">
                 <label><input type="radio" name="algorithm" value="Offense" checked/><h2>Offense</h2></label>
