--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -29,6 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>March 20, 2024</summary>
+                    Added ID 31, 32, 33.<br>
+                    Updated ID 18.<br>
+                    Added reroll section in Starter "Guide".
+                </details>
+                <details>
                     <summary>February 28, 2024</summary>
                     Added IDs 27, 28, 29, 30.<br>
                     Dormitories, TeamComposition tags added.
