--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -96,7 +96,7 @@
     <dialog id="algo-modal">
         <div id="name"></div>
 
-        <div id="help" data-tooltip="Click outside to close the dialog window."></div>
+        <!-- <div id="help" data-tooltip="Click outside to close the dialog window."></div> -->
 
         <div id="algo-field">
             <div class="tab-button">
