--- a/GFL/faqs/index.html
+++ b/GFL/faqs/index.html
@@ -37,6 +37,6 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/faqs/index.html" subheader="Girls' Frontline Reddit Lounge FAQs" onreplace="queryFunc(tags, cards)" ></include>
+        <include src="/univasset/scripts/faqs/index.html" subheader="Girls' Frontline Reddit Lounge FAQs" onreplace="queryFunc()" ></include>
     </body>
 </html>
