--- a/PNC/faqs/index.html
+++ b/PNC/faqs/index.html
@@ -27,6 +27,6 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/faqs/index.html" subheader="Project Neural Cloud FAQs" onreplace="queryFunc(tags, cards)" ></include>
+        <include src="/univasset/scripts/faqs/index.html" subheader="Project Neural Cloud FAQs" onreplace="queryFunc()" ></include>
     </body>
 </html>
