--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>March 30, 2024</summary>
+                    Updated ID 425.<br>
+                    Added ST AR-15 section in Unit Skills.<br>
+                    Updated Colt Walker section in Unit Skills.
+                </details>
+                <details>
                     <summary>March 13, 2024</summary>
                     Added IDs 512, 513, 514, 515, 516.<br>
                     Updated ID 254.
