--- a/GFL/skills.html
+++ b/GFL/skills.html
@@ -98,6 +98,11 @@
 
                     <dt>Colt Walker</dt>
                     <dd>ROF debuff is instantly applied after being cleansed.</dd>
+                    <dd>Prevents application of multiplicative and overriding in-battle ROF buffs.</dd>   <!-- https://old.reddit.com/r/girlsfrontline/comments/1b6zzvd/weekly_commanders_lounge_march_05_2024/ktnqxnw/ -->   <!-- maybe debuffs too -->
+
+                    <dt>ST AR-15</dt>
+                    <dd>Clones dying count towards the set skill.</dd>  <!-- https://old.reddit.com/r/girlsfrontline/comments/1b6zzvd/weekly_commanders_lounge_march_05_2024/ktvc164/ -->
+                    <dd>Viable units: T64 3set, P90 skill</dd>
                 </dl>
             </section>
         </div>
