--- a/PNC/unitskins/index.html
+++ b/PNC/unitskins/index.html
@@ -30,26 +30,22 @@
         <div class="container">
             <section id="main_content">
                 <!-- text filter -->
-                <!-- tags (radio) -->
+                <!-- tags (check) -->
                 <div id="table" class="func_table">
                     <table class="freeze-col freeze-row">
+                        <!-- name, status, skins -->
                         <thead>
                             <tr></tr>
                         </thead>
                         <tbody></tbody>
-                        <!-- name, status, skins -->
                     </table>
                 </div>
-                <h6>Previous databases:</h6>
+                <h5>Previous databases:</h5>
                 <a href="https://neuralen.modoo.at/" class="tooltip" target="_blank">NC Skin info<span class="tooltiptext">Managed by Pineapple</span></a>
                 <br>
                 <a href="https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU">PNC Neural Cloud Projections</a>
             </section>
         </div>
-
-        <template id="empty-cell">
-            <td class="hidden"></td>
-        </template>
 
         <template id="skin-cell">
             <td>
@@ -57,8 +53,7 @@
                 <!-- name -->
                 <!-- cost -->
                 <!-- tags -->
-                <button type="button"></button>
-
+                <button type="button"></button> <!-- select? -->
             </td>
         </template>
     </body>
