--- a/PNC/unitskins/index.html
+++ b/PNC/unitskins/index.html
@@ -30,6 +30,7 @@
         <div class="container">
             <section id="main_content">
                 <!-- text filter -->
+                <!-- currency type -->
                 <!-- tags (check) -->
                 <div id="table" class="func_table">
                     <table class="freeze-col freeze-row">
@@ -46,15 +47,18 @@
                 <a href="https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU">PNC Neural Cloud Projections</a>
             </section>
         </div>
-
-        <template id="skin-cell">
-            <td>
-                <!-- skin image -->
-                <!-- name -->
-                <!-- cost -->
-                <!-- tags -->
-                <button type="button"></button> <!-- select? -->
-            </td>
-        </template>
     </body>
+
+    <dialog>
+        <img src="" alt="">
+        <div id="name"></div>
+        <div id="cost"></div>
+        <ul></ul>
+        <select>
+            <option value="available">Available</option>
+            <option value="wishlist">Wishlist</option>
+            <option value="obtained">Obtained</option>
+        </select>
+        <ol></ol>
+    </dialog>
 </html>
