--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -114,6 +114,8 @@
     <dialog id="algo-select">
         <form method="dialog"></form>
     </dialog>
+
+    <!-- algo filter dialog -->
 </html>
 
 <!-- this page uses cookies for saving personal settings -->
