--- a/PNC/unitdata/index.html
+++ b/PNC/unitdata/index.html
@@ -31,7 +31,14 @@
             <section id="main_content">
                 <label><input type="checkbox">NOT</label>
                 <input type="text" placeholder="Filter..." />
-                <div id="table"></div>
+                <div id="table" class="func_table">
+                    <table class="freeze-col freeze-row">
+                        <thead>
+                            <tr></tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
             </section>
         </div>
     </body>
