--- a/PNC/unitskins/index.html
+++ b/PNC/unitskins/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <section id="main_content">
                 <!-- text filter -->
-                <!-- currency type -->
+                <!-- currency type (radio/select) -->
                 <!-- tags (check) -->
                 <div id="table" class="func_table">
                     <table class="freeze-col freeze-row">
