--- a/univasset/scripts/faqs/index.html
+++ b/univasset/scripts/faqs/index.html
@@ -26,6 +26,7 @@
             </form>
     
             <form id="Browse" class="tab-body">
+                <!-- change to range -->
                 <include attr-max="maxpage">
                     <input type="number" name="page" value="0" min="1" max="" />
                 </include>/<include key="maxpage"></include>
