--- a/PNC/unitskins/index.html
+++ b/PNC/unitskins/index.html
@@ -29,9 +29,18 @@
 
         <div class="container">
             <section id="main_content">
-                <!-- text filter -->
-                <!-- currency type (radio/select) -->
-                <!-- tags (check) -->
+                <div>
+                    <div class="tab-button">
+                        <label><input type="radio" value="" checked />Search</label>
+                        <label><input type="radio" value="" />Currency</label>
+                        <label><input type="radio" value="" />Skin Type</label>
+                    </div>
+
+                    <div class="tab-body"></div>    <!-- text filter -->
+                    <div class="tab-body"></div>    <!-- currency type (radio/select) -->
+                    <div class="tab-body"></div>    <!-- tags (check) -->
+                </div>
+
                 <div id="table" class="func_table">
                     <table class="freeze-col freeze-row">
                         <!-- name, status, skins -->
