--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -45,8 +45,8 @@
                     <dt>Vee</dt>
                     <dd>Normal Attack is turned into an "infinite range" melee attack.</dd> <!-- or normal attack does no damage, then normal attack skill activates (carnival mask) -->
 
-                    <dt>De Lacey</dt>
-                    <dd>Arma II can self heal when in one tether.</dd>   <!-- or is it -->
+                    <!-- <dt>De Lacey</dt> -->
+                    <!-- <dd>Arma II can self heal when in one tether.</dd>   still heals self on two tethers -->
 
                     <dt>Yanny</dt>
                     <dd>25% P.Def boost only takes into account in-battle base Hashrate.</dd>
@@ -55,6 +55,11 @@
                     <dd>Arma I "backlash" only activates on direct HP hit. Uses Abigail's stats.</dd>
                     <!-- arma1 crit damage may or may not count as crit for jiangyu pruposes -->
 
+                    <dt>Hannah</dt>
+                    <dd>Summons count towards Suppressing Fire.</dd>
+
+                    <dt>Imhotep</dt>
+                    <dd>Summons count for Hunter's Wings.</dd>
                     <!-- clukay auto is a non target attack -->
                     <!-- kuro danmaku counts as a normal attack skill -->
                     <!-- souchun arma 3 can bypass superarmor or just boss immunity? or only effective on bosses with resist value-->
@@ -63,7 +68,7 @@
 
                 <dl>
                     <dt id="NormalAttackSkills">Normal Attack Skills</dt>
-                    <dd>Can only critically strike through function sets and Bloodthirst Sigils.</dd>
+                    <dd>Can only critically strike through function sets, Bloodthirst Sigils, or explicit statement.</dd>
                     <dd>Activates only when unit deals Normal Attacks.</dd>
                     <dd>Is a direct effect of Normal Attacks.</dd>
                     <!-- cannot activate other normal attack skills -->
@@ -77,7 +82,7 @@
 
                 <!-- return to last clicked "anchor to hash" -->
 
-                <!-- 2%/5s doesn't count as "heal", therefore doesn't proc on heal-related skills and doesn't show in the summary -->
+                <!-- 2%/5s doesn't count as "heal", therefore doesn't proc on heal-related skills and doesn't show in the summary, also bypasses overload -->
             </section>
         </div>
     </body>
