--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -9,7 +9,7 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/faqs/index.css">
+        <link rel="stylesheet" href="/univasset/scripts/faqs/test.css">
         
         <!-- Setup theme-color -->
 
@@ -20,7 +20,7 @@
         <!-- end theme color meta headers -->
 
         <!-- Cloudflare Web Analytics -->
-        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "20de2f0b325f45c89012eb57982e3e29"}'></script>
+        <!-- <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "20de2f0b325f45c89012eb57982e3e29"}'></script> -->
         <!-- End Cloudflare Web Analytics -->
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
@@ -28,5 +28,5 @@
         <title>Exilium FAQs | Random Scraps</title>
     </head>
 
-    <include src="/univasset/scripts/faqs/test.html" subheader="Browse tab test" onreplace="queryFunc()" ></include>
+    <include src="/univasset/scripts/faqs/test.html" subheader="Tabbing test" onreplace="queryFunc()" ></include>
 </html>
