--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -117,7 +117,10 @@
         <form method="dialog"></form>
     </dialog>
 
-    <!-- algo filter dialog -->
+    <!-- unused for now -->
+    <dialog id="algo-filter">
+        <form method="dialog"></form>
+    </dialog>
 </html>
 
 <!-- this page uses cookies for saving personal settings -->
