--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary></summary>
+                    Updated IDs 1, 3, 5, 7, 98.
+                </details>
+                <details>
                     <summary>March 30, 2024</summary>
                     Updated ID 425.<br>
                     Added ST AR-15 section in Unit Skills.<br>
