--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -33,6 +33,7 @@
                 <details>
                     <summary></summary>
                     Updated IDs 1, 3, 5, 7, 98.
+                    Removed ID 464.
                 </details>
                 <details>
                     <summary>March 30, 2024</summary>
