--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -32,8 +32,9 @@
             <section id="main_content">
                 <details>
                     <summary></summary>
-                    Updated IDs 1, 3, 5, 7, 98.
+                    Updated IDs 1, 3, 5, 7, 98, 26, 28, 31.
                     Removed ID 464.
+                    Added tag MobileArmor
                 </details>
                 <details>
                     <summary>March 30, 2024</summary>
