--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -32,8 +32,8 @@
             <section id="main_content">
                 <details>
                     <summary></summary>
-                    Updated IDs 1, 3, 5, 7, 98, 26, 28, 31.
-                    Removed ID 464.
+                    Updated IDs 1, 3, 5, 7, 98, 26, 28, 31, 147, 150.
+                    Removed IDs 464, 97.
                     Added tag MobileArmor
                 </details>
                 <details>
