--- a/GFL/index.html
+++ b/GFL/index.html
@@ -17,7 +17,9 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <!-- end theme color meta headers -->
 
-        <!-- Setup Google Analytics -->
+        <!-- Cloudflare Web Analytics -->
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "20de2f0b325f45c89012eb57982e3e29"}'></script>
+        <!-- End Cloudflare Web Analytics -->
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
