--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,10 +31,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>April 29, 2024</summary>
                     Updated IDs 1, 3, 5, 7, 98, 26, 28, 31, 147, 150.
                     Removed IDs 464, 97.
-                    Added tag MobileArmor
+                    Added tag MobileArmor.
                 </details>
                 <details>
                     <summary>March 30, 2024</summary>
