--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -31,6 +31,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>April 30, 2024</summary>
+                    Updated IDs 207, 223, 292.
+                    Removed IDs 238, 258.
+                </details>
+                <details>
                     <summary>April 29, 2024</summary>
                     Updated IDs 1, 3, 5, 7, 98, 26, 28, 31, 147, 150.
                     Removed IDs 464, 97.
